syntax = "proto3";
package cosmatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/refractedlabs/cosmatics/types";


message SyncInfo {
  int64 block_height = 1;
  google.protobuf.Timestamp block_time = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message QuerySyncInfoRequest {
}

message QuerySyncInfoResponse {
  SyncInfo sync_info = 1 [(gogoproto.nullable) = false];
}