syntax = "proto3";
package prismatics.server;

import "gogoproto/gogo.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "prismatics/maturity.proto";

option go_package = "github.com/prism-finance/prismatics/server";


message QueryAllMaturitiesRequest {
  string asset_id = 1;
  string active = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryAllMaturitiesResponse {
  repeated Maturity maturities = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}